[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "data-quality-env"
version = "0.1.0"
description = "An OpenEnv Data Quality Analyst Environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn==0.29.0",
    "pydantic==2.7.1",
    "openai==1.30.1",
    "requests==2.32.2",
    "openenv-core"
]